# butia_speech

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.xml  requirements.txt  setup.py
butia_hotword_detection/: CMakeLists.txt  package.xml
butia_hotword_detection/config/: ros.yaml
butia_hotword_detection/launch/: people_tracking.launch
butia_hotword_detection/resources/: follow me_linux.ppn
butia_hotword_detection/scripts/: detector_hotword_node.py
butia_hotword_detection/scripts/DetectHotWord/: DetectHotWord.py
butia_speech_launchfiles/: mouth.launch  start_services.launch
config/: butia_audio_player.yaml  butia_hotword_detection.yaml  butia_speech_converter.yaml  butia_speech_recognizer.yaml  butia_speech_recognizer_old.yaml  butia_speech_services.yaml  butia_speech_synthesizer.yaml  butia_speech_synthesizer_ml.yaml  butia_speech_synthesizer_old.yaml  butia_stt_quiz.yaml  butia_stt_recepcionist.yaml  butia_tts.yaml  ros.yaml
launch/: audio_player.launch  hotword_detector.launch  mouth.launch  new_hotword_detector.launch  quiz_services.launch  speech_to_text.launch  speech_to_text_ml.launch  speech_to_text_old.launch  synthesizer_speech.launch  synthesizer_speech_ml.launch  synthesizer_speech_old.launch  text_to_speech.launch
msg/: SynthesizeSpeechMessage.msg
nodes/: audio_player.py  audio_to_angle.py  command_parser.py  detector_hotword_node.py  fala.mpeg  keyword_detector.py  new_detector_hotword_node.py  speech_recognizer.py  speech_recognizer_old.py  speech_synthesizer.py  speech_synthesizer_ml.py  speech_synthesizer_old.py  (+3 more)
(+24 files in other folders)
