<?xml version="1.0"?>
<package format="2">
  <name>butia_hotword_detection</name>
  <version>2.0.0</version>
  <description>This package is used for the identification of hot words in human to robot speak</description>

  <maintainer email="lucas.soares.avila@gmail.com.br">Lucas Soares Avila</maintainer>
  <maintainer email="renantarouco@gmail.com.br">Renan Tarouco da Fonseca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
